# opensearch-neural-pre-train

./: .env_sample  .gitignore  .mcp.json  AI_DOMAIN_INTEGRATION_SUMMARY.md  AMAZON_LINUX_2023_SETUP.md  ARM_INSTALL.md  CLAUDE.md  DGX_QUICKSTART.md  FIX_SUMMARY.md  GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MAKEFILE_GUIDE.md  Makefile  NOTEBOOK_GUIDE.md  README.md  REVIEW_RECOMMENDATIONS.md  TRAIN_INFO.md  USAGE_EXAMPLES.md  WIKIPEDIA_USAGE.md  add_find_similar_tokens.py  add_synonym_discovery.py  ai_domain_terminology.py  demo_idf.json  demo_idf_korean.py  fix_all_vocab_size.py  fix_section_numbering.py  fix_synonym_tokenid.py  improvement_suggestions.md  korean_neural_sparse_training.ipynb  korean_neural_sparse_training_v0.3.0.ipynb  merge_domain_and_auto_synonyms.py  monitor.md  neural_sparse_inference.ipynb  plan.md  requirements-minimal.txt  requirements-monitoring.txt  requirements.txt  setup_amazon_linux_2023.sh  synonym_enhancement_research.ipynb  (+11 more)
.omc/: continuation-count.json
archive/: fix_ai_terminology_imports.py  fix_model_paths.py  fix_notebook_imports.py  fix_section_order.py  fix_training_data_paths.py  fix_vocab_size.py  update_notebook.py  update_synonym_usage.py
benchmark/: __init__.py  config.py  data_loader.py  dataset.py  encoders.py  hf_data_loader.py  hf_runner.py  hybrid_searcher.py  index_manager.py  indexer.py  metrics.py  report.py  runner.py  score_fusion.py  searchers.py
config/: training_config.yaml
configs/: baseline_dgx.yaml  finetune_msmarco.yaml  (+20 more)
tools/idf-compute/: Cargo.toml  load_idf.py
tools/idf-compute/src/: main.rs
(+436 files in other folders)
