[package]
name = "idf-compute"
version = "0.1.0"
edition = "2021"
description = "Fast IDF weight computation for SPLADE training"

[dependencies]
tokenizers = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
glob = "0.3"

[profile.release]
opt-level = 3
lto = true
